--- a/index.html
+++ b/index.html
@@ -1486,7 +1486,7 @@
             console.log('Signing up...');
             alert('Account created successfully! Redirecting to dashboard...');
             // Redirect to dashboard
-            window.location.href = 'index.html';
+            window.location.href = 'dashboard.html';
         }
 
         function handleLogin(event) {
@@ -1494,7 +1494,7 @@
             console.log('Logging in...');
             alert('Login successful! Redirecting to dashboard...');
             // Redirect to dashboard
-            window.location.href = 'index.html';
+            window.location.href = 'dashboard.html';
         }
 
         // Click outside modal to close
