--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formative - Influencer Marketing Platform</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <style>
         * {
             margin: 0;
@@ -1432,5 +1434,10 @@
             }
         }, 10000);
     </script>
+    <script src="js/main.js"></script>
+    <script src="js/mobile.js"></script>
+    <script src="js/features.js"></script>
+    <script src="js/performance.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
