--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formative - Unite. Create. Grow.</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <style>
         * {
             margin: 0;
@@ -1547,5 +1549,10 @@
             });
         });
     </script>
+    <script src="js/main.js"></script>
+    <script src="js/mobile.js"></script>
+    <script src="js/features.js"></script>
+    <script src="js/performance.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
