Add comprehensive user profile system with edit functionality
- Complete profile.html with beautiful UI
- View/Edit mode toggle for profile editing
- Profile photo upload with preview
- Animated statistics display
- 5 organized tabs: Overview, Social Media, Portfolio, Reviews, Settings
- Real-time profile updates
- Social media accounts display with follower counts
- Portfolio showcase with work samples
- Client reviews and ratings system
- Privacy settings and preferences
- Public profile sharing functionality
- Connected social accounts (Instagram, TikTok, YouTube, Twitter)
- Demo-ready with rich sample data
- Fully responsive mobile design
- Integrated with dashboard navigation
- LocalStorage persistence

--- a/dashboard.html
+++ b/dashboard.html
@@ -454,7 +454,7 @@
                 <a class="nav-tab active" onclick="showPage('dashboard')">Dashboard</a>
                 <a class="nav-tab" onclick="showPage('opportunities')">Opportunities</a>
                 <a class="nav-tab" onclick="showPage('messages')">Messages</a>
-                <a class="nav-tab" onclick="showPage('profile')">Profile</a>
+                <a class="nav-tab" href="profile.html">Profile</a>
             </div>
         </div>
         <div class="user-section">
@@ -465,7 +465,7 @@
             <div class="icon-btn" onclick="showMessages()">
                 <span>💬</span>
             </div>
-            <div class="avatar" id="user-avatar" onclick="showUserMenu()">U</div>
+            <div class="avatar" id="user-avatar" onclick="goToProfile()">U</div>
         </div>
     </nav>
 
@@ -1257,6 +1257,11 @@
             showPage('messages');
         }
 
+        // Go to profile
+        function goToProfile() {
+            window.location.href = 'profile.html';
+        }
+        
         // Show user menu
         function showUserMenu() {
             const action = confirm('Would you like to logout?');
