Fix responsive navigation for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -1025,6 +1025,16 @@
             .nav-links {
                 display: none;
             }
+            
+            .nav-buttons {
+                display: flex !important;
+                gap: 0.5rem;
+            }
+            
+            .nav-buttons .btn {
+                padding: 0.5rem 1rem;
+                font-size: 0.9rem;
+            }
 
             .footer-content {
                 grid-template-columns: 1fr;
