--- a/dashboard.html
+++ b/dashboard.html
@@ -35,6 +35,43 @@
             overflow-x: hidden;
         }
 
+        /* Button Styles - THIS FIXES THE INVISIBLE BUTTONS! */
+        .btn {
+            padding: 0.75rem 1.5rem;
+            border-radius: 0.75rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            border: none;
+            font-size: 1rem;
+            text-decoration: none;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .btn-ghost {
+            background: rgba(255, 255, 255, 0.1);
+            color: var(--text-primary) !important;
+            border: 1px solid var(--border-color);
+        }
+
+        .btn-ghost:hover {
+            background: var(--bg-secondary);
+            border-color: var(--accent-teal);
+            transform: translateY(-2px);
+        }
+
+        .btn-primary {
+            background: linear-gradient(135deg, var(--accent-teal) 0%, #0891b2 100%);
+            color: white !important;
+        }
+
+        .btn-primary:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 30px rgba(20, 184, 166, 0.3);
+        }
+
         /* Navigation */
         .navbar {
             background: rgba(30, 41, 54, 0.95);
@@ -641,6 +678,7 @@
     </div>
 
     <script>
+        // ALL YOUR ORIGINAL JAVASCRIPT - UNCHANGED
         // Global variables
         let currentUser = null;
         let userType = null;
