--- a/index.html
+++ b/index.html
@@ -1355,8 +1355,8 @@
             <div class="footer-column">
                 <h4>Legal</h4>
                 <div class="footer-links">
-                    <a href="#" class="footer-link">Privacy</a>
-                    <a href="#" class="footer-link">Terms</a>
+                    <a href="privacy.html" class="footer-link">Privacy</a>
+                    <a href="tos.html" class="footer-link">Terms</a>
                     <a href="#" class="footer-link">Security</a>
                     <a href="#" class="footer-link">Cookies</a>
                 </div>
