--- a/dashboard.html
+++ b/dashboard.html
@@ -1396,7 +1396,7 @@
         let currentConversation = null;
 
         // API Base URL
-        const API_BASE = 'https://formativeunites.us';
+        const API_BASE = 'https://formative-production.up.railway.app';
 
         // Initialize dashboard
         document.addEventListener('DOMContentLoaded', async () => {
