--- a/dashboard.html
+++ b/dashboard.html
@@ -1179,6 +1179,12 @@
                                 Connect TikTok
                             </button>
                             
+                            <!-- YouTube OAuth Button -->
+                            <button class="btn btn-primary" onclick="initiateOAuth('youtube')" style="justify-content: center; width: 100%; background: linear-gradient(135deg, #FF0000 0%, #cc0000 100%);">
+                                <span style="font-size: 1.2rem;">▶️</span>
+                                Connect YouTube
+                            </button>
+                            
                             <!-- Bluesky Simple Connect -->
                             <div style="border-top: 1px solid var(--border-color); padding-top: 1rem; margin-top: 0.5rem;">
                                 <p style="color: var(--text-secondary); font-size: 0.9rem; margin-bottom: 1rem;">
