--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             right: 0 !important;
             width: 100% !important;
             z-index: 9999 !important;
-            background: rgba(15, 20, 25, 0.95) !important;
-            backdrop-filter: blur(20px);
-            padding: 1rem 2rem;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            background: rgba(15, 20, 25, 0.98) !important;
+            backdrop-filter: blur(20px) !important;
+            -webkit-backdrop-filter: blur(20px) !important;
+            padding: 1rem 2rem !important;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1) !important;
         }
         .nav-container {
             max-width: 1400px;
@@ -30,19 +31,57 @@
             justify-content: space-between;
             align-items: center;
         }
+        .nav-links {
+            display: flex !important;
+            gap: 2rem;
+        }
+        .nav-link {
+            color: #9ca3af !important;
+            text-decoration: none;
+        }
+        .nav-link:hover {
+            color: #ffffff !important;
+        }
         .nav-buttons {
             display: flex !important;
             gap: 1rem;
             align-items: center;
         }
+        /* Ensure buttons are always visible */
+        .navbar .btn {
+            padding: 0.75rem 1.5rem !important;
+            border-radius: 0.5rem !important;
+            font-weight: 600 !important;
+            cursor: pointer !important;
+            font-size: 0.95rem !important;
+            transition: all 0.2s ease !important;
+        }
+        .navbar .btn-ghost {
+            background: transparent !important;
+            color: #ffffff !important;
+            border: 1px solid rgba(255, 255, 255, 0.2) !important;
+        }
+        .navbar .btn-ghost:hover {
+            background: rgba(255, 255, 255, 0.1) !important;
+            border-color: #14b8a6 !important;
+        }
+        .navbar .btn-primary {
+            background: linear-gradient(135deg, #14b8a6 0%, #0891b2 100%) !important;
+            color: #ffffff !important;
+            border: none !important;
+        }
+        .navbar .btn-primary:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(20, 184, 166, 0.4) !important;
+        }
         .hero {
             padding-top: 6rem !important;
         }
         @media (max-width: 768px) {
-            .navbar { padding: 0.75rem 1rem; }
+            .navbar { padding: 0.75rem 1rem !important; }
             .nav-links { display: none !important; }
             .nav-buttons { display: flex !important; gap: 0.5rem; }
-            .nav-buttons .btn { padding: 0.5rem 0.75rem; font-size: 0.85rem; }
+            .nav-buttons .btn { padding: 0.5rem 0.75rem !important; font-size: 0.85rem !important; }
         }
     </style>
 </head>
